--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
    - main
 jobs:
  example-jobs:
-   runs-on: ubuntu:latest
+   runs-on: ubuntu-latest
 
    steps:
      - name: print a welcome message
