--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,11 @@ jobs:
    steps:
      - name: print a welcome message
        run: echo "Welcome to our first Github Actions workflow"
+     - name: Checkout respository
+       uses: actions/checkout@v5.0.0
+
+     - name: list repository files
+       run: ls -la
    
    
    
