--- a/.github/workflows/push.pr.yml
+++ b/.github/workflows/push.pr.yml
@@ -16,7 +16,7 @@ jobs:
    runs-on: ubuntu-latest
    steps:
    - name: checkout code
-   - uses: actions/checkout@4.2.2
+     uses: actions/checkout@v5.0.0
    - name: run tests
      run: npm test
 
