--- a/.github/workflows/push-pr.yml
+++ b/.github/workflows/push-pr.yml
@@ -2,23 +2,21 @@ on:
   push:
     branches:
       - main
-      - "release/xx" #anything after release asdsd
+      - 'release/**'  # Matches any branch starting with 'release/'
     paths:
-      - "src/xx"  #to aviod run the pipeline on all the repository files as maybe i have documentation files so to avoid that i can identify specifc paths
+      - 'src/**'       # Only trigger when files under src/ are changed
 
-  pull_request: ########
+  pull_request:
     branches:
       - main
-      - "release/xx" #anything after release
+      - 'release/**'   # Same pattern for PRs
+
 jobs:
   test:
-     runs-on: ubuntu-latest
-     steps:
-     - name: checkout code
-       uses: actions/checkout@v5.0.0
-   
-     - name: run tests
-       run: npm test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-   
-    
+      - name: Run tests
+        run: npm test
