--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,6 +1,15 @@
 on: 
   workflow_dispatch: 
-
+    inputs:
+      environment:
+        description: "choose envionment"
+        required: true
+        default: "staging"
+        type: choice
+        options:
+          - staging
+          - production
+        
 
 jobs:
   deploy:
