--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -16,4 +16,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Deploy aaplication
-        run: echo "Deploying the application"
+        run: echo "Deploying the application ${{ inputs.environment }} "
